--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "expo": "~49.0.8",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-hook-form": "^7.46.0",
+    "react-native": "^0.72.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
