--- a/package.json
+++ b/package.json
@@ -24,7 +24,14 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.13.0",
     "react-redux": "^8.1.2",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "react-native-maps": "1.7.1",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^19.0.0",
+    "expo-location": "~16.1.0",
+    "expo-camera": "~13.4.4",
+    "expo-media-library": "~15.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
