--- a/package.json
+++ b/package.json
@@ -10,28 +10,35 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-firebase/app": "^18.4.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^1.9.5",
     "expo": "~49.0.8",
+    "expo-camera": "~13.4.4",
     "expo-font": "~11.4.0",
+    "expo-location": "~16.1.0",
+    "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.3.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.46.0",
     "react-native": "^0.72.4",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.13.0",
+    "react-native-web": "~0.19.6",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
-    "react-native-maps": "1.7.1",
-    "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^19.0.0",
-    "expo-location": "~16.1.0",
-    "expo-camera": "~13.4.4",
-    "expo-media-library": "~15.4.1"
+    "redux-persist": "^6.0.0",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
